APIを利用し、Inboxダミーデータ表示